--- a/people.html
+++ b/people.html
@@ -6,9 +6,9 @@ permalink: "people"
 {% assign people_by_position = site.data.people | group_by: "position" %}
 {% for position in people_by_position %}
   {% for person in position.items %}
-    <div style="clear:left;border-bottom:1px solid silver;margin-bottom:5px;"></div>
+    <div class="person-separator small-bottom-margin"></div>
     {% if person.img %}
-      <img style="width:250px;height: 180px;object-fit:cover;float:left;margin-right:20px;margin-bottom:20px;" src="{{ "/img/people/" | append: person.img | relative_url}}" />
+      <img class="person-img" src="{{ "/img/people/" | append: person.img | relative_url}}" />
       <h3>{{ person.title}} {{ person.name }}</h3>
     {% else %}
       <h3>{{ person.title}} {{ person.name }}</h3>
@@ -33,6 +33,6 @@ permalink: "people"
       Interests: {{ person.interests | array_to_sentence_string }}
     {% endif %}
     -->
-</p>
+    </p>
   {% endfor %}
 {% endfor %}
